--- a/深入理解计算机系统（2）.md
+++ b/深入理解计算机系统（2）.md
@@ -165,3 +165,58 @@ typedef struct CPU_FLAGS_STRUCT
 } cpu_flag_t;
 ```
 
+
+
+指令解析完成，使用字符串的形式把(P1~P9)的工作又做了一遍。
+
+由于sub指令还未实现，故产生如下输出，sub以上的部分是正确的。
+
+```bash
+begin
+400400    mov    $0x3,%edi
+400440    callq  0x00400000
+400000    push   %rbp
+400040    mov    %rsp,%rbp
+400080    sub    $0x10,%rsp
+400080    sub    $0x10,%rsp
+```
+
+
+
+c语言断言`assert`的使用
+
+> ASSERT() 是一个调试程序时经常使用的宏，在程序运行时它计算括号内的表达式，如果表达式为 FALSE (0), 程序将报告错误，并终止执行。如果表达式不为 0，则继续执行后面的语句。这个宏通常原来判断程序中是否出现了明显非法的数据，如果出现了终止程序以免导致严重后果，同时也便于查找错误。
+>
+> **ASSERT 只有在 Debug 版本中才有效，如果编译为 Release 版本则被忽略**
+>
+> 来源：菜鸟教程
+
+
+
+现在开始条件码（`conditon codes`）部分的代码
+
+
+
+add函数设置标志位
+
+加法有符号溢出的判断：`!(src_sign ^ dst_sign)&&(src_sign ^ val_sign)`：根据`src + dst = val` 三个数的标志位来确定有符号数溢出。
+
+```c
+static void add_handler(od_t *src_od, od_t *dst_od, core_t *cr)
+{
+    // ...
+    
+    int val_sign = ((val >> 63) & 0x1);
+    int src_sign = ((src >> 63) & 0x1);
+    int dst_sign = ((dst >> 63) & 0x1);
+
+    // set condition flags
+    cr->flags.ZF = (val == 0); 
+    cr->flags.CF = (val < *((uint64_t *)src)); // unsigned
+    cr->flags.SF = ((val >> 63) & 0x1);
+    cr->flags.OF = (src_sign == 0 && dst_sign == 0 && val_sign == 1) || 
+        (src_sign == 1 && dst_sign == 1 && val_sign == 0); // signed   
+}
+
+```
+
