重构之后的汇编模拟器可运行：递归求和sum(3)

--- a/深入理解计算机系统（2）.md
+++ b/深入理解计算机系统（2）.md
@@ -1,4 +1,36 @@
+
+
 # 深入理解计算机系统（2）
+
+汇编模拟器实现：解析递归函数`sum(3)`
+
+递归函数：`recursive call`
+
+```c
+#include <stdint.h>
+uint64_t sum(uint64_t n)
+{
+    if (n == 0)
+    {
+        return 0;
+    }
+    else
+    {
+        return n + sum(n - 1);
+    }    
+}
+
+int main()
+{
+    uint64_t a = sum(3);
+    return 0;
+}
+
+```
+
+对应的汇编模拟器输出：
+
+![image-20220122174138189](https://raw.githubusercontent.com/shizhengLi/image_bed_01/main/img/image-20220122174138189.png)
 
 ## 第一次代码重构
 
@@ -165,20 +197,59 @@ typedef struct CPU_FLAGS_STRUCT
 } cpu_flag_t;
 ```
 
-
-
 指令解析完成，使用字符串的形式把(P1~P9)的工作又做了一遍。
 
-由于sub指令还未实现，故产生如下输出，sub以上的部分是正确的。
+#### 递归求和函数c语言和汇编语言
 
-```bash
-begin
-400400    mov    $0x3,%edi
-400440    callq  0x00400000
-400000    push   %rbp
-400040    mov    %rsp,%rbp
-400080    sub    $0x10,%rsp
-400080    sub    $0x10,%rsp
+递归求和的c语言代码
+
+```c
+#include <stdint.h>
+uint64_t sum(uint64_t n)
+{
+    if (n == 0)
+    {
+        return 0;
+    }
+    else
+    {
+        return n + sum(n - 1);
+    }    
+}
+
+int main()
+{
+    uint64_t a = sum(3);
+    return 0;
+}
+
+```
+
+对应的汇编指令
+
+```c
+char assembly[19][MAX_INSTRUCTION_CHAR] = {
+        "push   %rbp",              // 0
+        "mov    %rsp,%rbp",         // 1
+        "sub    $0x10,%rsp",        // 2
+        "mov    %rdi,-0x8(%rbp)",   // 3
+        "cmpq   $0x0,-0x8(%rbp)",   // 4
+        "jne    0x400200",          // 5: jump to 8
+        "mov    $0x0,%eax",         // 6
+        "jmp    0x400380",          // 7: jump to 14
+        "mov    -0x8(%rbp),%rax",   // 8
+        "sub    $0x1,%rax",         // 9
+        "mov    %rax,%rdi",         // 10
+        "callq  0x00400000",        // 11
+        "mov    -0x8(%rbp),%rdx",   // 12
+        "add    %rdx,%rax",         // 13
+        "leaveq ",                  // 14
+        "retq   ",                  // 15
+        "mov    $0x3,%edi",         // 16：starting point
+        "callq  0x00400000",        // 17:jump to 0 调用sum函数
+        "mov    %rax,-0x8(%rbp)",   // 18: last execute
+    };
+
 ```
 
 
@@ -195,27 +266,330 @@ c语言断言`assert`的使用
 
 现在开始条件码（`conditon codes`）部分的代码
 
+#### 回调函数的实现
 
 
-add函数设置标志位
+
+##### add函数设置标志位
 
 加法有符号溢出的判断：`!(src_sign ^ dst_sign)&&(src_sign ^ val_sign)`：根据`src + dst = val` 三个数的标志位来确定有符号数溢出。
 
 ```c
+
 static void add_handler(od_t *src_od, od_t *dst_od, core_t *cr)
 {
-    // ...
-    
-    int val_sign = ((val >> 63) & 0x1);
-    int src_sign = ((src >> 63) & 0x1);
-    int dst_sign = ((dst >> 63) & 0x1);
+    uint64_t src = decode_operand(src_od);
+    uint64_t dst = decode_operand(dst_od);
 
-    // set condition flags
-    cr->flags.ZF = (val == 0); 
-    cr->flags.CF = (val < *((uint64_t *)src)); // unsigned
-    cr->flags.SF = ((val >> 63) & 0x1);
-    cr->flags.OF = (src_sign == 0 && dst_sign == 0 && val_sign == 1) || 
-        (src_sign == 1 && dst_sign == 1 && val_sign == 0); // signed   
+    if (src_od->type == REG && dst_od->type == REG)
+    {
+        // src: register (value: int64_t bit map)
+        // dst: register (value: int64_t bit map)
+        uint64_t val = *(uint64_t *)dst + *(uint64_t *)src;
+        int val_sign = ((val >> 63) & 0x1);
+        int src_sign = ((src >> 63) & 0x1);
+        int dst_sign = ((dst >> 63) & 0x1);
+
+        // set condition flags
+        cr->flags.CF = (val < *((uint64_t *)src)); // unsigned
+        cr->flags.SF = ((val >> 63) & 0x1);
+        cr->flags.OF = (src_sign == 0 && dst_sign == 0 && val_sign == 1) || 
+                        (src_sign == 1 && dst_sign == 1 && val_sign == 0); // signed
+        cr->flags.ZF = (val == 0);
+
+        // update registers
+        *(uint64_t *)dst = val;
+        // signed and unsigned value follow the same addition. e.g.
+        // 5 = 0000000000000101, 3 = 0000000000000011, -3 = 1111111111111101, 5 + (-3) = 0000000000000010
+        next_rip(cr);
+        return;
+    }
+}
+
+```
+
+##### sub函数设置标志位
+
+```c
+static void sub_handler(od_t *src_od, od_t *dst_od, core_t *cr)
+{
+    uint64_t src = decode_operand(src_od);
+    uint64_t dst = decode_operand(dst_od);
+
+    if (src_od->type == IMM && dst_od->type == REG)
+    {
+        // src: register (value: int64_t bit map)
+        // dst: register (value: int64_t bit map)
+        // dst = dst - src = dst + (-src)
+        uint64_t neg_src = ~src + 1;
+        uint64_t val = *(uint64_t *)dst + neg_src;
+
+        int val_sign = ((val >> 63) & 0x1);
+        int src_sign = ((src >> 63) & 0x1);
+        int dst_sign = ((dst >> 63) & 0x1);
+
+        // set condition flags
+        cr->flags.CF = (val > *(uint64_t *)dst); // unsigned
+        cr->flags.SF = val_sign;
+        cr->flags.OF = (dst_sign == 0 && src_sign == 1 && val_sign == 1) ||
+                        (dst_sign == 1 && src_sign == 0 && val_sign == 0); // signed
+        cr->flags.ZF = (val == 0);
+        // update registers
+        *(uint64_t *)dst = val;
+        next_rip(cr);
+        return;
+    }
+}
+```
+
+
+
+##### cmp函数设置标志位
+
+
+
+根据下图：我们发现，cmp指令的实现逻辑就是sub(S2-S1)，可以借鉴sub指令实现过程。
+
+![image-20220122160904349](https://raw.githubusercontent.com/shizhengLi/image_bed_01/main/img/image-20220122160904349.png)
+
+```c
+static void cmp_handler(od_t *src_od, od_t *dst_od, core_t *cr)
+{
+    uint64_t src = decode_operand(src_od);
+    uint64_t dst = decode_operand(dst_od);  // 虚拟地址
+
+    if (src_od->type == IMM && dst_od->type >= MEM_IMM)  // cmpq imm，memory
+    {
+        // src: register (value: int64_t bit map)
+        // dst: register (value: int64_t bit map)
+        // dst = dst - src = dst + (-src)
+        uint64_t neg_src = ~src + 1;
+        uint64_t dst_val = read64bits_dram(va2pa(dst, cr), cr);
+        uint64_t val = dst_val + neg_src;
+
+        int val_sign = ((val >> 63) & 0x1);
+        int src_sign = ((src >> 63) & 0x1);
+        int dst_sign = ((dst_val >> 63) & 0x1);
+
+        // set condition flags
+        cr->flags.CF = (val > dst_val); // unsigned
+        cr->flags.SF = val_sign;
+        cr->flags.OF = (dst_sign == 0 && src_sign == 1 && val_sign == 1) ||
+                        (dst_sign == 1 && src_sign == 0 && val_sign == 0); // signed
+        cr->flags.ZF = (val == 0);
+
+        // signed and unsigned value follow the same addition. e.g.
+        // 5 = 0000000000000101, 3 = 0000000000000011, -3 = 1111111111111101, 5 + (-3) = 0000000000000010
+        next_rip(cr);
+        return;
+    }
+}
+```
+
+
+
+##### jne指令
+
+
+
+该命令`"jne    0x400200"`后面跟的是立即数，
+
+`jne`是根据上一条指令也就是`cmp`后面，其中`cmp`指令相当于`sub`指令，会设置各种标志位，`jne`会使用`cmp`设置的`ZF`标志位。
+
+如果`ZF == 0`，说明`cmp src, dst` 这条指令中`dst`和`src`并不相等，此时`jne`会跳转。因为，如果`cmp src, dst` 计算出来`dst`和`src`相等的话，会置 `ZF == 1`。
+
+```c
+// jne: jump when not equal(zero)
+static void jne_handler(od_t *src_od, od_t *dst_od, core_t *cr)
+{
+    uint64_t src = decode_operand(src_od);
+    // src_od is actually an instruction memory address
+    // but we are interpreting it as an immediate number
+    if (cr->flags.ZF == 0)
+    {
+        // last instruction value != 0
+        cr->rip = src;
+    }
+    else
+    {
+        // last instruction value == 0
+        next_rip(cr);
+    }
+    cr->flags.__cpu_flag_values = 0; // 标志位重置
+}
+```
+
+
+
+![image-20220122163313863](https://raw.githubusercontent.com/shizhengLi/image_bed_01/main/img/image-20220122163313863.png)
+
+##### jmp指令实现
+
+
+
+无条件跳转到`src`
+
+```c
+static void jmp_handler(od_t *src_od, od_t *dst_od, core_t *cr)
+{
+    uint64_t src = decode_operand(src_od);
+    cr->rip = src;
+    cr->flags.__cpu_flag_values = 0;
+}
+```
+
+##### leave指令实现逻辑
+
+
+
+```c
+leave
+movq %rbp, %rsp
+popq %rbp
+```
+
+![image-20220122170204892](https://raw.githubusercontent.com/shizhengLi/image_bed_01/main/img/image-20220122170204892.png)
+
+```c
+static void leave_handler(od_t *src_od, od_t *dst_od, core_t *cr)
+{
+    // mov %rbp, %rsp
+    (cr->reg).rsp = (cr->reg).rbp;
+    // popq %rbp
+    // rbp 恢复到调用前的rbp，即恢复到上一个栈帧
+    uint64_t old_val = read64bits_dram(
+            va2pa((cr->reg).rsp, cr),
+            cr
+            );
+    (cr->reg).rsp = (cr->reg).rsp + 8;
+    (cr->reg).rbp = old_val;
+    next_rip(cr);
+    reset_cflags(cr);
+    return;
+}
+```
+
+#### 递归调用的汇编模拟器
+
+调用递归函数`sum(3)`具体汇编代码运行过程：
+
+```bash
+azheng@lishizheng:/mnt/e/csapp_bilibili/ass_first_refactory$ make hardware
+/usr/bin/gcc-9 -Wall -g -O2 -Werror -std=gnu99 -Wno-unused-function -I./src ./src/common/print.c ./src/common/convert.c ./src/hardware/cpu/mmu.c ./src/hardware/cpu/isa.c ./src/hardware/memory/dram.c  ./src/main_hardware.c -o exe_hardware
+./exe_hardware
+begin
+400400    mov    $0x3,%edi
+400440    callq  0x00400000      // 调用sum(3)
+400000    push   %rbp
+400040    mov    %rsp,%rbp
+400080    sub    $0x10,%rsp
+4000c0    mov    %rdi,-0x8(%rbp)   // sum(n) n存在寄存器%rdi中，这里n = 3
+400100    cmpq   $0x0,-0x8(%rbp) // 比较 n == 0 ？
+400140    jne    0x400200		// 不等，跳转到0x400200 
+400200    mov    -0x8(%rbp),%rax  //
+400240    sub    $0x1,%rax  	// n = n - 1 = 3 - 1 = 2
+400280    mov    %rax,%rdi 	    
+4002c0    callq  0x00400000		// 调用sum(2)
+400000    push   %rbp
+400040    mov    %rsp,%rbp
+400080    sub    $0x10,%rsp
+4000c0    mov    %rdi,-0x8(%rbp)
+400100    cmpq   $0x0,-0x8(%rbp) // 比较 n == 0 ?
+400140    jne    0x400200		 // 不等，跳转到0x400200 
+400200    mov    -0x8(%rbp),%rax
+400240    sub    $0x1,%rax 		// n = n - 1 = 2 - 1 = 1
+400280    mov    %rax,%rdi
+4002c0    callq  0x00400000		// 调用sum(1)
+400000    push   %rbp
+400040    mov    %rsp,%rbp
+400080    sub    $0x10,%rsp
+4000c0    mov    %rdi,-0x8(%rbp)
+400100    cmpq   $0x0,-0x8(%rbp)
+400140    jne    0x400200
+400200    mov    -0x8(%rbp),%rax
+400240    sub    $0x1,%rax
+400280    mov    %rax,%rdi
+4002c0    callq  0x00400000		// 调用sum(0)
+400000    push   %rbp
+400040    mov    %rsp,%rbp
+400080    sub    $0x10,%rsp
+4000c0    mov    %rdi,-0x8(%rbp)
+400100    cmpq   $0x0,-0x8(%rbp) // n == 0 ?	
+400140    jne    0x400200		// 此时 n == 0，故jne不跳转
+400180    mov    $0x0,%eax		// 继续执行cmp后面的指令
+4001c0    jmp    0x400380		// 无条件跳转到指令leaveq
+400380    leaveq				// 恢复%rbp
+4003c0    retq					// sum(0)函数返回
+400300    mov    -0x8(%rbp),%rdx
+400340    add    %rdx,%rax
+400380    leaveq
+4003c0    retq					// sum(1)函数返回					
+400300    mov    -0x8(%rbp),%rdx
+400340    add    %rdx,%rax
+400380    leaveq
+4003c0    retq					// sum(2)函数返回
+400300    mov    -0x8(%rbp),%rdx
+400340    add    %rdx,%rax
+400380    leaveq
+4003c0    retq					// sum(3)函数返回
+400480    mov    %rax,-0x8(%rbp)
+register match
+memory match
+```
+
+#### 指令周期
+
+目前为止，我们模拟了下图中蓝色框内的部分：指令周期的流程，这里采用的是定长指令集格式，每条指令长度为`64 * sizeof(char)`（这里是用字符数组的）。
+
+![image-20220122171532829](https://raw.githubusercontent.com/shizhengLi/image_bed_01/main/img/image-20220122171532829.png)
+
+*图片来源：yaaangmin*
+
+指令周期执行过程
+
+第一步：取指。根据`rip`寄存器从内存中取出指令。
+
+第二步：译码。解析指令字符串，通过线性扫描（不会退）解析出(操作码，源操作数，目的操作数)，即`(op, src, dst)`。保存在`inst_t`结构中。
+
+其中，指令结构`inst_t`定义如下
+
+```c
+typedef struct INST_STRUCT
+{
+    op_t    op;         // enum of operators. e.g. mov, call, etc.
+    od_t    src;        // operand src of instruction
+    od_t    dst;        // operand dst of instruction
+} inst_t;
+
+```
+
+第三步：执行指令。这步具体是如何工作的呢？根据指令类型op，去查函数指针表，找到合适的回调函数。这里会涉及访存，写寄存器，设置条件码等工作。
+
+第四步：根据`rip`继续选择指令执行。下一条指令地址rip的设置可能来源于call,jmp/jne, next_rip等。
+
+补充：代码段(`.text`)的起始地址是`0x00400000`
+
+指令周期代码
+
+```c
+// instruction cycle is implemented in CPU
+// the only exposed interface outside CPU
+void instruction_cycle(core_t *cr)
+{
+    // FETCH: get the instruction string by program counter
+   // const char *inst_str = (const char *)cr->rip;  // 虚拟地址解释为字符串指针
+    char inst_str[MAX_INSTRUCTION_CHAR + 10];  // 数组大小 +10 是防止字符数组溢出
+    readinst_dram(va2pa(cr->rip, cr), inst_str, cr); // 根据rip从内存取指，存入inst_str中
+    debug_printf(DEBUG_INSTRUCTIONCYCLE, "%lx    %s\n", cr->rip, inst_str);
+
+    // DECODE: decode the run-time instruction operands
+    inst_t inst;
+    parse_instruction(inst_str, &inst, cr); // 解析inst_str指向字符串，解析的值传给inst结构
+    
+    // EXECUTE: get the function pointer or handler by the operator
+    handler_t handler = handler_table[inst.op];
+    // update CPU and memory according the instruction
+    handler(&(inst.src), &(inst.dst), cr);
 }
 
 ```
