汇编模拟器实现：add函数和递归sum函数的模拟,模拟整个指令周期

--- a/深入理解计算机系统（2）.md
+++ b/深入理解计算机系统（2）.md
@@ -268,6 +268,113 @@ c语言断言`assert`的使用
 
 #### 回调函数的实现
 
+##### call和ret指令的实现
+
+原理：主要是rip寄存器和rsp寄存器的改变。
+
+
+
+![image-20220124111019795](https://raw.githubusercontent.com/shizhengLi/image_bed_01/main/img/image-20220124111019795.png)
+
+
+
+`call`指令
+
+第一步：`rsp`指向下一个空的格，即向下减8。
+
+```c
+(cr->reg).rsp = (cr->reg).rsp - 8;
+```
+
+第二步：下一条指令地址存入新的`rsp`中。
+
+```c
+ write64bits_dram(   // 下一条指令写入rsp中
+        va2pa((cr->reg).rsp, cr),
+        cr->rip + sizeof(char) * MAX_INSTRUCTION_CHAR,
+        cr
+        );
+```
+
+第三步：`rip`指向被调函数的地址。
+
+```c
+ // jump to target function address
+    cr->rip = src;   
+```
+
+第四步：`call`指令会使得标志位清零。
+
+`call`指令的回调函数代码如下：
+
+```c
+static void call_handler(od_t *src_od, od_t *dst_od, core_t *cr)
+{
+    uint64_t src = decode_operand(src_od);
+    // uint64_t dst = decode_operand(dst_od);
+
+    // src: immediate number: virtual address of target function starting
+    // dst: empty
+    // push the return value
+    (cr->reg).rsp = (cr->reg).rsp - 8;
+    write64bits_dram(   // 下一条指令写入rsp中
+        va2pa((cr->reg).rsp, cr),
+        cr->rip + sizeof(char) * MAX_INSTRUCTION_CHAR,
+        cr
+        );
+    // jump to target function address
+    cr->rip = src;   
+    reset_cflags(cr);
+}
+```
+
+`ret`指令
+
+第一步：取出`rsp`中的返回地址。
+
+```c
+uint64_t ret_addr = read64bits_dram(  // 取出rsp中的返回地址
+        va2pa((cr->reg).rsp, cr),
+        cr
+        );
+```
+
+第二步：`rsp`向上恢复一格，即加8。
+
+```c
+    (cr->reg).rsp = (cr->reg).rsp + 8;
+
+```
+
+第三步：`rip`指向返回地址。
+
+```c
+// jump to return address
+    cr->rip = ret_addr;
+```
+
+`ret`指令的回调函数代码如下：
+
+```c
+static void ret_handler(od_t *src_od, od_t *dst_od, core_t *cr)
+{
+    // uint64_t src = decode_operand(src_od);
+    // uint64_t dst = decode_operand(dst_od);
+
+    // src: empty
+    // dst: empty
+    // pop rsp
+    uint64_t ret_addr = read64bits_dram(  // 取出rsp中的返回地址
+        va2pa((cr->reg).rsp, cr),
+        cr
+        );
+    (cr->reg).rsp = (cr->reg).rsp + 8;
+    // jump to return address
+    cr->rip = ret_addr;
+    reset_cflags(cr);
+}
+```
+
 
 
 ##### add函数设置标志位
@@ -469,14 +576,139 @@ static void leave_handler(od_t *src_od, od_t *dst_od, core_t *cr)
 }
 ```
 
+#### add函数的汇编模拟器
+
+add函数的测试函数：
+
+```c
+static void TestAddFunctionCallAndComputation()
+{
+    ACTIVE_CORE = 0x0;
+    
+    core_t *ac = (core_t *)&cores[ACTIVE_CORE];
+	// ... 省略
+    char assembly[15][MAX_INSTRUCTION_CHAR] = {  // 调用add函数的汇编过程
+        "push   %rbp",              // 0
+        "mov    %rsp,%rbp",         // 1
+        "mov    %rdi,-0x18(%rbp)",  // 2
+        "mov    %rsi,-0x20(%rbp)",  // 3
+        "mov    -0x18(%rbp),%rdx",  // 4
+        "mov    -0x20(%rbp),%rax",  // 5
+        "add    %rdx,%rax",         // 6
+        "mov    %rax,-0x8(%rbp)",   // 7
+        "mov    -0x8(%rbp),%rax",   // 8
+        "pop    %rbp",              // 9
+        "retq",                     // 10
+        "mov    %rdx,%rsi",         // 11
+        "mov    %rax,%rdi",         // 12
+        "callq  0x00400000",        // 13
+        "mov    %rax,-0x8(%rbp)",   // 14
+    };
+
+    // copy to physical memory
+    for (int i = 0; i < 15; ++ i)
+    {
+        writeinst_dram(va2pa(i * 0x40 + 0x00400000, ac), assembly[i], ac);
+        // 0x40 是一条指令的大小
+    }
+    ac->rip = MAX_INSTRUCTION_CHAR * sizeof(char) * 11 + 0x00400000;
+    
+    printf("begin\n");
+    int time = 0;
+    while (time < 15)
+    {
+        instruction_cycle(ac);
+        print_register(ac);
+        print_stack(ac);
+        time ++;
+    } 
+    // 省略...
+}
+
+```
+
+测试结果
+
+```bash
+begin
+4002c0    mov    %rdx,%rsi
+400300    mov    %rax,%rdi
+400340    callq  0x00400000
+400000    push   %rbp
+400040    mov    %rsp,%rbp
+400080    mov    %rdi,-0x18(%rbp)
+4000c0    mov    %rsi,-0x20(%rbp)
+400100    mov    -0x18(%rbp),%rdx
+400140    mov    -0x20(%rbp),%rax
+400180    add    %rdx,%rax
+4001c0    mov    %rax,-0x8(%rbp)
+400200    mov    -0x8(%rbp),%rax
+400240    pop    %rbp
+400280    retq
+400380    mov    %rax,-0x8(%rbp)
+register match
+memory match
+```
+
+
+
 #### 递归调用的汇编模拟器
 
-调用递归函数`sum(3)`具体汇编代码运行过程：
+调用递归函数`sum(3)`的测试函数：
+
+```c
+static void TestSumRecursiveCondition()
+{
+    ACTIVE_CORE = 0x0;
+    core_t *cr = (core_t *)&cores[ACTIVE_CORE];
+
+    char assembly[19][MAX_INSTRUCTION_CHAR] = {  // 调用sum函数的汇编主要过程
+        "push   %rbp",              // 0
+        "mov    %rsp,%rbp",         // 1
+        "sub    $0x10,%rsp",        // 2
+        "mov    %rdi,-0x8(%rbp)",   // 3
+        "cmpq   $0x0,-0x8(%rbp)",   // 4
+        "jne    0x400200",          // 5: jump to 8
+        "mov    $0x0,%eax",         // 6
+        "jmp    0x400380",          // 7: jump to 14
+        "mov    -0x8(%rbp),%rax",   // 8
+        "sub    $0x1,%rax",         // 9
+        "mov    %rax,%rdi",         // 10
+        "callq  0x00400000",        // 11
+        "mov    -0x8(%rbp),%rdx",   // 12
+        "add    %rdx,%rax",         // 13
+        "leaveq ",                  // 14
+        "retq   ",                  // 15
+        "mov    $0x3,%edi",         // 16：starting point
+        "callq  0x00400000",        // 17:jump to 0
+        "mov    %rax,-0x8(%rbp)",   // 18: last execute
+    };
+
+    // copy to physical memory
+    for (int i = 0; i < 19; ++ i)
+    {
+        writeinst_dram(va2pa(i * 0x40 + 0x00400000, cr), assembly[i], cr);
+        // 0x40 是一条指令的大小
+    }
+    cr->rip = MAX_INSTRUCTION_CHAR * sizeof(char) * 16 + 0x00400000;
+
+    printf("begin\n");
+    int time = 0;
+    while ((cr->rip <= 18 * 0x40 + 0x00400000) &&
+           time < MAX_NUM_INSTRUCTION_CYCLE)
+    {
+        instruction_cycle(cr);
+        print_register(cr);
+        print_stack(cr);
+        time ++;
+    } 
+}
+```
+
+调用递归函数`sum(3)`测试结果：汇编递归的过程
 
 ```bash
 azheng@lishizheng:/mnt/e/csapp_bilibili/ass_first_refactory$ make hardware
-/usr/bin/gcc-9 -Wall -g -O2 -Werror -std=gnu99 -Wno-unused-function -I./src ./src/common/print.c ./src/common/convert.c ./src/hardware/cpu/mmu.c ./src/hardware/cpu/isa.c ./src/hardware/memory/dram.c  ./src/main_hardware.c -o exe_hardware
-./exe_hardware
 begin
 400400    mov    $0x3,%edi
 400440    callq  0x00400000      // 调用sum(3)
